--- a/statistics.html
+++ b/statistics.html
@@ -81,7 +81,7 @@
 <p><span class="badge badge-light">Mechelen,BE Mechelen,BE  Mechelen, Belgium  Mechelen,BE  Mechelen,BE  France Boston</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698606348-co-op-statistical-genetics-genetic-epidemiology-human-target-validation-core-'>Biogen Co-op: Statistical Genetics & Genetic Epidemiology (Human Target Validation Core) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698606348-co-op-statistical-genetics-genetic-epidemiology-human-target-validation-core-'>Biogen Co-op: Statistical Genetics & Genetic Epidemiology (Human Target Validation Core) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -89,7 +89,7 @@
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698571404-principal-analyst-statistical-programming-r-d-'>Biogen Principal Analyst, Statistical Programming (R&D) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698571404-principal-analyst-statistical-programming-r-d-'>Biogen Principal Analyst, Statistical Programming (R&D) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -127,7 +127,7 @@
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698271162-statistical-programmer'>Biogen Statistical Programmer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698271162-statistical-programmer'>Biogen Statistical Programmer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -151,7 +151,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">Durham, NC</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<h5><a href='http://foghorntherapeutics.applytojob.com/apply/f8yWkDWk4s/Head-Of-Biostatistics'>Head of Biostatistics - Foghorn Therapeutics - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://foghorntherapeutics.applytojob.com/apply/f8yWkDWk4s/Head-Of-Biostatistics'>Head of Biostatistics - Foghorn Therapeutics - Career Page</a></h5> 
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -167,7 +167,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statmodeling.stat.columbia.edu/2019/10/23/were-hiring-an-econ-postdoc/'>We?re hiring an econ postdoc! ?  Statistical Modeling, Causal Inference, and Social Science</a></h5> 
+<h5><a href='https://statmodeling.stat.columbia.edu/2019/10/23/were-hiring-an-econ-postdoc/'>We?re hiring an econ postdoc! ?  Statistical Modeling, Causal Inference, and Social Science</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
@@ -187,7 +187,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">Montreal Montreal</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://uis.applytojob.com/apply/EWLSFp6glf/Security-Monitoring-Solution-Assessment-And-Implementation'>Security monitoring solution - assessment and implementation - UNESCO Institute for Statistics - Career Page</a></h5> 
+<h5><a href='http://uis.applytojob.com/apply/EWLSFp6glf/Security-Monitoring-Solution-Assessment-And-Implementation'>Security monitoring solution - assessment and implementation - UNESCO Institute for Statistics - Career Page</a></h5> 
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -199,7 +199,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">Brisbane</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Eurofins/743999697944376-statisticien-ne-h-f-'>Eurofins STATISTICIEN(NE) (H/F) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Eurofins/743999697944376-statisticien-ne-h-f-'>Eurofins STATISTICIEN(NE) (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -221,7 +221,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">North America United States</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/statistical-programmer-31535'>Statistical Programmer - Syneos Health Careers</a></h5> 
+<h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/statistical-programmer-31535'>Statistical Programmer - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America United States</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -254,7 +254,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p>Oct 8, 2019 ... Applicants must have a PhD degree in mathematics, statistics, bio-statistics, data 
 science, or a related area by the time of appointment. Successful candidates?...</p>
 <hr/>
-<h5><a href='https://www.mathjobs.org/jobs/jobs/14907'>California State University, Chico, Department of Math and Statistics </a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.mathjobs.org/jobs/jobs/14907'>California State University, Chico, Department of Math and Statistics </a></h5> 
 <p><span class="badge badge-light">California California California United States</span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
@@ -280,7 +280,7 @@ generate?...</p>
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lbl.referrals.selectminds.com/jobs/cascade-climate-statistics-postdoctoral-scholar-2253'>CASCADE Climate Statistics Postdoctoral Scholar - LBL Careers</a></h5> 
+<h5><a href='https://lbl.referrals.selectminds.com/jobs/cascade-climate-statistics-postdoctoral-scholar-2253'>CASCADE Climate Statistics Postdoctoral Scholar - LBL Careers</a></h5> 
 <p><span class="badge badge-light">United States  Berkeley Berkeley</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -319,7 +319,7 @@ listings, and figures for clinical trials. Support Data Management in data set?.
 <p><span class="badge badge-light">Chicago Rockford  Chicago</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<h5><a href='https://recruit.ap.uci.edu/JPF05335'>Tenure-Track/Tenured Faculty Position - Statistics (JPF05335) - UCI - Recruit</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://recruit.ap.uci.edu/JPF05335'>Tenure-Track/Tenured Faculty Position - Statistics (JPF05335) - UCI - Recruit</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
@@ -347,7 +347,7 @@ listings, and figures for clinical trials. Support Data Management in data set?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-13</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/suffolkuniversity/job/ouhkbfw0'>Suffolk University Careers - Lecturers, Mathematics and Statistics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/suffolkuniversity/job/ouhkbfw0'>Suffolk University Careers - Lecturers, Mathematics and Statistics</a></h5> 
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -387,7 +387,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Mechelen, Belgium</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://ppdi.referrals.selectminds.com/jobs/biostatistician-4603'>Biostatistician - PPD Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ppdi.referrals.selectminds.com/jobs/biostatistician-4603'>Biostatistician - PPD Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -459,7 +459,7 @@ some instances. Statistical expertise in data management, analysis of panel data
 <p><span class="badge badge-light">Telangana, India</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/8E0BBDA5BE'>Statistics & Data Corporation (SDC) - Jobs: Senior Clinical Programmer - Apply online</a></h5> 
+<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/8E0BBDA5BE'>Statistics & Data Corporation (SDC) - Jobs: Senior Clinical Programmer - Apply online</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -469,7 +469,7 @@ Statistician (Health) for Centers for Medicare &amp; Medicaid Services [CMS] in 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qpHaVfwV&k=Job&j=oMoaafwe&__jvst=Employee&__jvsd=sXuXJhwT&__jvsc=Twitter&bid=ntzL2Mw6'>Suzy Careers - Computational Statistician</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qpHaVfwV&k=Job&j=oMoaafwe&__jvst=Employee&__jvsd=sXuXJhwT&__jvsc=Twitter&bid=ntzL2Mw6'>Suzy Careers - Computational Statistician</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-07</p>
 <hr/>
@@ -489,7 +489,7 @@ Statistician (Health) for Centers for Medicare &amp; Medicaid Services [CMS] in 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-<h5><a href='https://jobs.amstat.org/jobs/12797743/two-tenure-track-positions-in-statistics-assistant-or-associate-level'>Two Tenure-track Positions in Statistics (Assistant or Associate level), Employment | AMSTAT</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.amstat.org/jobs/12797743/two-tenure-track-positions-in-statistics-assistant-or-associate-level'>Two Tenure-track Positions in Statistics (Assistant or Associate level), Employment | AMSTAT</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-04</p>
 <hr/>
